--- a/03-Methods and Functions/05-Lambda-Expressions-Map-and-Filter.ipynb
+++ b/03-Methods and Functions/05-Lambda-Expressions-Map-and-Filter.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def square(num):\n",
@@ -44,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "my_nums = [1,2,3,4,5]"
@@ -54,16 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x205baec21d0>"
+       "<map at 0x7f546cd9d370>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
