--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -25,32 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    return ((4/3)*3.14*(rad**3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "33.49333333333333"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vol(2)"
+    "    pass"
    ]
   },
   {
@@ -84,41 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    \n",
-    "    new_high = high+1\n",
-    "    \n",
-    "    for i in range(low,new_high):\n",
-    "\n",
-    "        if num == i:\n",
-    "            print(f'{i} is in the range between {low} and {high}')"
+    "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 10\n"
-     ]
-    }
-   ],
-   "source": [
-    "ran_check(5,2,10)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -154,8 +110,7 @@
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    new_high = high+1\n",
-    "    "
+    "    pass"
    ]
   },
   {
@@ -454,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
