Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,15 +38,15 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n",
+    "Numbers:int(6) float(2.3)\n",
     "\n",
-    "Strings:\n",
+    "Strings:'"hello world"\n",
     "\n",
-    "Lists:\n",
+    "Lists:[1,2,3]\n",
     "\n",
-    "Tuples:\n",
+    "Tuples:(1,2,8)\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries:={'key1' : 'value1','key2':'value2'}\n"
    ]
   },
   {
@@ -56,8 +56,9 @@
     "## Numbers\n",
     "\n",
     "Write an equation that uses multiplication, division, an exponent, addition, and subtraction that is equal to 100.25.\n",
-    "\n",
+    " \n",
     "Hint: This is just to test your memory of the basic arithmetic commands, work backwards from 100.25"
+    (100.25+(1*0)/1*1)-0
    ]
   },
   {
@@ -76,10 +77,11 @@
     "Answer these 3 questions without typing code. Then type code to check your answer.\n",
     "\n",
     "    What is the value of the expression 4 * (6 + 5)\n",
-    "    \n",
+    "    44 \n",
     "    What is the value of the expression 4 * 6 + 5 \n",
-    "    \n",
+    "    29 \n",
     "    What is the value of the expression 4 + 6 * 5 "
+         34
    ]
   },
   {
@@ -96,6 +98,7 @@
    "metadata": {},
    "source": [
     "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>"
+    'float formatting'
    ]
   },
   {
@@ -103,6 +106,7 @@
    "metadata": {},
    "source": [
     "What would you use to find a number’s square root, as well as its square? "
+    
    ]
   },
   {
@@ -113,7 +117,7 @@
    },
    "outputs": [],
    "source": [
-    "# Square root:\n"
+    "# Square root: 100**0.5\n"
    ]
   },
   {
@@ -124,7 +128,7 @@
    },
    "outputs": [],
    "source": [
-    "# Square:\n"
+    "# Square: 10**2\n"
    ]
   },
   {
@@ -151,7 +155,7 @@
    "source": [
     "s = 'hello'\n",
     "# Print out 'e' using indexing\n",
-    "\n"
+    " s=[1]\n"
    ]
   },
   {
@@ -171,7 +175,7 @@
    "source": [
     "s ='hello'\n",
     "# Reverse the string using slicing\n",
-    "\n"
+    " s=[::-1]\n"
    ]
   },
   {
@@ -193,7 +197,7 @@
     "# Print out the 'o'\n",
     "\n",
     "# Method 1:\n",
-    "\n"
+    "s=[4]\n"
    ]
   },
   {
@@ -205,7 +209,7 @@
    "outputs": [],
    "source": [
     "# Method 2:\n",
-    "\n"
+    "s=[-1]\n"
    ]
   },
   {
@@ -230,7 +234,9 @@
    },
    "outputs": [],
    "source": [
-    "# Method 1:\n"
+    "# Method 1: mylist=[0,0,0]
+                  mylist.sort()
+                   mylist\n"
    ]
   },
   {
@@ -241,7 +247,9 @@
    },
    "outputs": [],
    "source": [
-    "# Method 2:\n"
+    "# Method 2: mylist=[0,0,0]
+                  mylist.reverse()
+                   mylist\n"
    ]
   },
   {
@@ -260,7 +268,8 @@
    "outputs": [],
    "source": [
     "list3 = [1,2,[3,4,'hello']]\n",
-    "\n"
+    "list3[2][2] = 'goodbye'
+       list3 \n"
    ]
   },
   {
@@ -279,7 +288,8 @@
    "outputs": [],
    "source": [
     "list4 = [5,3,4,6,1]\n",
-    "\n"
+    "list4.sort()
+      list4 \n"
    ]
   },
   {
@@ -304,8 +314,9 @@
    },
    "outputs": [],
    "source": [
-    "d = {'simple_key':'hello'}\n",
+    "d = {'simple_key':'hello'}\n"
     "# Grab 'hello'\n"
+    d['simple key'],
    ]
   },
   {
@@ -318,6 +329,8 @@
    "source": [
     "d = {'k1':{'k2':'hello'}}\n",
     "# Grab 'hello'\n"
+    d['k1']['k2'],
+        
    ]
   },
   {
@@ -330,8 +343,10 @@
    "source": [
     "# Getting a little tricker\n",
     "d = {'k1':[{'nest_key':['this is deep',['hello']]}]}\n",
-    "\n",
+\n",
     "#Grab hello\n"
+    d['k1'][0]['nest_key'][1][0]
+
    ]
   },
   {
@@ -344,6 +359,8 @@
    "source": [
     "# This will be hard and annoying!\n",
     "d = {'k1':[1,2,{'k2':['this is tricky',{'tough':[1,2,['hello']]}]}]}"
+    d['k1'][2]['k2'][1]['tough'][2][0]
+
    ]
   },
   {
@@ -365,6 +382,7 @@
    "metadata": {},
    "source": [
     "What is the major difference between tuples and lists?<br><br>"
+    Ans: No Because normal dictionaries are mappings not a sequence.
    ]
   },
   {
@@ -372,6 +390,7 @@
    "metadata": {},
    "source": [
     "How do you create a tuple?<br><br>"
+    t(1,2,3)
    ]
   },
   {
@@ -386,6 +405,7 @@
    "metadata": {},
    "source": [
     "What is unique about a set?<br><br>"
+    Ans: They do not allow for duplicate items
    ]
   },
   {
@@ -404,7 +424,7 @@
    "outputs": [],
    "source": [
     "list5 = [1,2,2,33,4,4,11,22,3,3,2]\n",
-    "\n",
+    " set(list5)\n",
     "\n"
    ]
   },
@@ -420,7 +440,7 @@
    "metadata": {},
    "source": [
     "For the following quiz questions, we will get a preview of comparison operators. In the table below, a=3 and b=4.\n",
-    "\n",
+    " 2 \n",
     "<table class=\"table table-bordered\">\n",
     "<tr>\n",
     "<th style=\"width:10%\">Operator</th><th style=\"width:45%\">Description</th><th>Example</th>\n",
@@ -428,7 +448,8 @@
     "<tr>\n",
     "<td>==</td>\n",
     "<td>If the values of two operands are equal, then the condition becomes true.</td>\n",
-    "<td> (a == b) is not true.</td>\n",
+    "<td> (a == b) is not true.</td> 
+\n",
     "</tr>\n",
     "<tr>\n",
     "<td>!=</td>\n",
@@ -463,6 +484,8 @@
    "metadata": {},
    "source": [
     "What will be the resulting Boolean of the following pieces of code (answer fist then check by typing it in!)"
+    
+
    ]
   },
   {
